# advent_code_23

01_trebuchet/: .clang-format  CMakeLists.txt  README.md
01_trebuchet/inputs/: unit_test.txt
01_trebuchet/src/: main.c
02_code_conundrum/: CMakeLists.txt  README.md
02_code_conundrum/inputs/: unit_tests_all_bad.txt  unit_tests_all_good.txt
02_code_conundrum/src/: main.c
03_gear_ratios/: CMakeLists.txt  README.md
03_gear_ratios/inputs/: test_adjacency_nothing.txt  test_borders_parts.txt  test_borders_symbol.txt  test_diagonal.txt  test_horizontal.txt  test_vertical.txt
03_gear_ratios/src/: main.c
04_scratchcards/: CMakeLists.txt  README.md
04_scratchcards/src/: main.c
06_wait_for_it/: CMakeLists.txt  README.md
06_wait_for_it/inputs/: real_inputs_2.txt
06_wait_for_it/src/: main.c
